--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
               <li>Look through project requirements and through project data</li>
               <li>Began work on UI sketches for Alpha Release </li>
             <p></p>
-            <p>Yang Hao progress:  This week I focused on working with the data set using R.  An overview of my work is in
-              <a href="pages/yang_hao_update_02-23-18.html">this webpage</a></p>
+            <p>Yang Hao progress:  
+                <li>Look through project requirements for Alpha Release</li>
+                <li>---</li>
+                <li>---</li>
+             </p>
             <p>Natasha Rice progress: </p>
               <li>Created a git-repo for the project </li>
               <li>Created a rdata file to hopefully speed up processings </li>
