--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
               <li>Began work on UI sketches for Alpha Release </li>
             <p></p>
             <p>Yang Hao progress:  
-                <li>Look through project requirements for Alpha Release</li>
-                <li>---</li>
-                <li>---</li>
+                <li>Working on 5 issues of part C</li>
+                <li>Try to get some new idea from the design of other group's projects.</li>
+                <li>Organize data and integrate it with the requirements of project 3</li>
              </p>
             <p>Natasha Rice progress: </p>
               <li>Created a git-repo for the project </li>
