--- a/index.html
+++ b/index.html
@@ -149,9 +149,10 @@
               <li>Looked at different shiny mapping libraries to try to find the best libraries for Leaflet.</li>
             <p></p>
             <p>Yang Hao progress:  
-                <li>Integrate FIPS data with tornado data</li>
-                <li>Find the way to calculate loss data which include discrete and continuous data.</li>
-                <li>Finished plots for injuries, fatalities and most hit counties.</li>
+                <li>Added injuries/fatalities loss hour plot</li>
+                <li>Added injuries/fatalities loss monthly plot</li>
+                <li>Added two new columns for losses</li>
+                <li>Updated charts for the types of losses</li>
              </p>
             <p>Natasha Rice progress: </p>
               <li>Converted Map into a new format</li>
