--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
               <li>Looked at different shiny mapping libraries to try to find the best libraries for Leaflet.</li>
             <p></p>
             <p>Yang Hao progress:  
-                <li>Added injuries/fatalities loss hour plot</li>
-                <li>Added injuries/fatalities loss monthly plot</li>
-                <li>Added two new columns for losses</li>
-                <li>Updated charts for the types of losses</li>
+                <li>Add new features to data</li>
+                <li>Switch categorical data of loss to numerical values</li>
+                <li>Organize the loss data for different years</li>
+                <li>Updated loss value to tables and charts</li>
              </p>
             <p>Natasha Rice progress: </p>
               <li>Converted Map into a new format</li>
